# Kuesto

./: CMakeLists.txt  README.md  exemple.xlsx  main.cpp
src/files/: docx_generator.cpp  interface.cpp  xlsx_worker.cpp
src/headers/: docx_generator.h  interface.h  xlsx_worker.h
